--- a/TomasosPizza/appsettings.json
+++ b/TomasosPizza/appsettings.json
@@ -1,8 +1,5 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "Default": "Server=localhost; Database=Tomasos; Integrated Security=True"
+  }
 }
